objects/sumoapp__EventTypeCustomField__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__EventType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SUMO Event Type</label>
        <referenceTo>sumoapp__EventType__c</referenceTo>
        <relationshipName>EventTypeCustomFields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__RelatedField__c</fullName>
        <inlineHelpText>The value has the following format: ObjectApiName.FieldApiName.</inlineHelpText>
        <label>Related Event/SUMO Event Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__Value__c</fullName>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>SUMO Event Type Custom Field</label>
    <nameField>
        <displayFormat>F-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Event Type Custom Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>